--- a/lab3/CMakeLists.txt
+++ b/lab3/CMakeLists.txt
@@ -1,18 +1,9 @@
-cmake_minimum_required(VERSION 3.16)
+cmake_minimum_required(VERSION 3.15)
 project(lab3)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(lab3 main.cpp)
-
 find_package(OpenMP REQUIRED)
-if(NOT TARGET OpenMP::OpenMP_CXX)
-    add_library(OpenMP_TARGET INTERFACE)
-    add_library(OpenMP::OpenMP_CXX ALIAS OpenMP_TARGET)
-    target_compile_options(OpenMP_TARGET INTERFACE ${OpenMP_CXX_FLAGS})
-    find_package(Threads REQUIRED)
-    target_link_libraries(OpenMP_TARGET INTERFACE Threads::Threads)
-    target_link_libraries(OpenMP_TARGET INTERFACE ${OpenMP_CXX_FLAGS})
-endif()
 
-target_link_libraries(lab3 PUBLIC OpenMP::OpenMP_CXX)
+add_executable(lab3 main.cpp)
+target_link_libraries(lab3 PRIVATE OpenMP::OpenMP_CXX)
